Added trees/figures for aurora mutant

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper, draft]{article}
+\documentclass[11pt,a4paper, final]{article}
 \usepackage{ocg}
 \usepackage{times}
 \usepackage{pdfpages}
@@ -805,31 +805,31 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 && & & & &\\
 %
 \clearpage
 %
-\begin{sidewaysfigure}
+\begin{figure}[htbp]
 	\begin{center}
-		\begin{overpic}[width=0.8\linewidth]{images/allMasterTrees.pdf}
+		\begin{overpic}[width=0.95\linewidth]{images/allMasterTrees.pdf}
 		\end{overpic}
-\caption[Visual analysis of division behaviour of all cell lineages located in the master cell file.]
+\caption[All cell lineages located in the master cell file of the five wild type datasets and the aurora mutant.]
 {
-{\bf Visual analysis of division behaviour of all cell lineages located in the master cell file.} The left labels show the time steps and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}.
+{\bf All cell lineages located in the master cell file of the five wild type datasets and the aurora mutant.} The left labels show the time steps and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}.
 }
 	\label{fig:allMasterTrees}
 	\end{center}
-\end{sidewaysfigure}
+\end{figure}
 \clearpage
 %
 %
-\begin{figure}[htbp]
+\begin{sidewaysfigure}
 	\begin{center}
 		\begin{overpic}[width=1.\linewidth]{images/allTrees.pdf}
 		\end{overpic}
-\caption[All cell lineages of our five datasets.]
+\caption[All cell lineages of the five wild type datasets and the aurora mutant.]
 {
-{\bf All cell lineages of our five datasets.} The left labels show the time steps and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. The bricks visualisation at the bottom of each tree allows a comparison of division sequences among several trees.
+{\bf All cell lineages of the five wild type datasets and the aurora mutant.} The left labels show the time steps and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. The bricks visualisation at the bottom of each tree allows a comparison of division sequences among several trees.
 }
 	\label{fig:allTrees}
 	\end{center}
-\end{figure}
+\end{sidewaysfigure}
 \clearpage
 %
 \begin{figure}[htbp]
@@ -873,9 +873,9 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 && & & & &\\
 	\begin{center}
 		\begin{overpic}[width=1.\linewidth]{images/treeDivisionSequences.pdf}
 		\end{overpic}
-\caption[Division sequence trees for all five datasets.]
+\caption[Division sequence trees for all five datasets and the aurora mutant.]
 {
-{\bf Division sequence trees for all five datasets.} The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions.}
+{\bf Division sequence trees for all five datasets and the aurora mutant.} The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions.}
 	\label{fig:treeDivisionSequences}
 	\end{center}
 \end{figure}
