--- a/suppMat.tex
+++ b/suppMat.tex
@@ -731,30 +731,50 @@ For example, consider the initial B\'ezier surface from Figure~\ref{fig:modelSur
 \cmidrule{2-6} \cmidrule{8-12}
 & $\#120830$ & $\#121204$ & $\#121211$ & $\#130508$ & $\#130607$ && BD & D & PDG & R & RE\\ \midrule
 \textbf{NH}\\
-Area ratio & 0.098 & 0.080 & 0.100 & 0.129 & 0.118 && 0.320 & 0.300 & 0.300 & 0.308 & 0.308\\
-Average $\#$ Cells & 63.8 & 47.1 & 82.2 & 42.4 & 82.3 && 59.8 & 64.0 & & 65.9 & 66.4\\
-Average $\#$ AD & 29.6 & 24.9 & 28.1 & 21.0 & 36.6 && 19.6 & 27.0 & & 30.6 & 34.0\\
-Average $\#$ PD & 32.1 & 20.2 & 49.1 & 20.4 & 42.7 && 38.1 & 35.0 & & 33.2 & 30.3\\
+Area ratio & 0.098 & 0.080 & 0.100 & 0.129 & 0.118 &&
+0.320 & 0.300 & 0.300 & 0.308 & 0.308\\
+Average $\#$ Cells & 63.8 & 47.1 & 82.2 & 42.4 & 82.3 &&
+59.8 & 64.0 & 68.8 & 65.9 & 66.4\\
+Average $\#$ AD & 29.6 & 24.9 & 28.1 & 21.0 & 36.6 &&
+19.6 & 27.0 & 6.11 & 30.6 & 34.0\\
+Average $\#$ PD & 32.1 & 20.2 & 49.1 & 20.4 & 42.7 &&
+38.1 & 35.0 & 60.7 & 33.2 & 30.3\\
 \textbf{1DC}\\
-Area Ratio & 0.070 & 0.070 & 0.034 & 0.035 & 0.095 && 0.420 & 0.445 & 0.445 & &\\
-Average $\#$ Cells & 63.5 & 48.5 & 81.6 & 46.2 & 81.4 && 66.6 & 63.6 & & &\\
-Average $\#$ AD & 30.2 & 23.4 & 32.5 & 20.1 & 38.1 && 18.3 & 26.0 & & &\\
-Average $\#$ PD & 31.3 & 23.0 & 47.1 & 24.1 & 41.3 && 46.3 & 35.6 & & &\\
+Area Ratio & 0.070 & 0.070 & 0.034 & 0.035 & 0.095 &&
+0.420 & 0.445 & 0.445 & &\\
+Average $\#$ Cells & 63.5 & 48.5 & 81.6 & 46.2 & 81.4 &&
+66.6 & 63.6 & 62.5 & &\\
+Average $\#$ AD & 30.2 & 23.4 & 32.5 & 20.1 & 38.1 &&
+18.3 & 26.0 & 3.98 & &\\
+Average $\#$ PD & 31.3 & 23.0 & 47.1 & 24.1 & 41.3 &&
+46.3 & 35.6 & 56.5 & &\\
 \textbf{2DC}\\
-Area Ratio & 0.078 & 0.060 & 0.048 & 0.047 & 0.054 && 0.450 & 0.450 & 0.450 & &\\
-Average $\#$ Cells & 61.9 & 48.3 & 79.1 & 45.1 & 86.5 && & 64.5 & & &\\
-Average $\#$ AD & 32.1 & 27.3 & 33.3 & 22.5 & 42.3 && & 26.0 & & &\\
-Average $\#$ PD & 27.8 & 19.0 & 43.8 & 20.5 & 42.1 && & 36.5 & & &\\
+Area Ratio & 0.078 & 0.060 & 0.048 & 0.047 & 0.054 &&
+0.450 & 0.450 & 0.450 & &\\
+Average $\#$ Cells & 61.9 & 48.3 & 79.1 & 45.1 & 86.5 &&
+& 64.5 & & &\\
+Average $\#$ AD & 32.1 & 27.3 & 33.3 & 22.5 & 42.3 &&
+& 26.0 & & &\\
+Average $\#$ PD & 27.8 & 19.0 & 43.8 & 20.5 & 42.1 &&
+& 36.5 & & &\\
 \textbf{2DCBase}\\
-Area Ratio & & & & & && 0.450 & 0.450 & 0.450 & &\\
-Average $\#$ Cells & & & & & && 62.5 & 66.2 & & &\\
-Average $\#$ AD & & & & & && 18.0 & 36.6 & & &\\
-Average $\#$ PD & & & & & && 42.4 & 27.5 & & &\\
+Area Ratio & & & & & &&
+0.450 & 0.450 & 0.450 & &\\
+Average $\#$ Cells & & & & & &&
+62.5 & 66.2 & & &\\
+Average $\#$ AD & & & & & &&
+18.0 & 36.6 & & &\\
+Average $\#$ PD & & & & & &&
+42.4 & 27.5 & & &\\
 \textbf{Real Data}\\
-$\#$ Cells & 64 & 49 & 81 & 45 & 82 && & & & &\\
-$\#$ AD & 31 & 21 & 25 & 18 & 27 && & & & &\\
-$\#$ PD & 23 & 19 & 36 & 19 & 39 && & & & &\\
-$\#$ RD & 8 & 7 & 15 & 7 & 13 && & & & &\\
+$\#$ Cells & 64 & 49 & 81 & 45 & 82 &&
+& & & &\\
+$\#$ AD & 31 & 21 & 25 & 18 & 27 &&
+& & & &\\
+$\#$ PD & 23 & 19 & 36 & 19 & 39 &&
+& & & &\\
+$\#$ RD & 8 & 7 & 15 & 7 & 13 &&
+& & & &\\
 \bottomrule
 \end{tabular}
 	\caption[Parameters for data-driven and idealized models.]{\textbf{Parameters for data-driven and idealized models.} The table lists the average number of cells, anticlinal (AD) and periclinal divisions (PD) for each model setting performing 100 runs. NH, 1DC, 2DC and 2DCBase describe the different hard-wired division settings in the model. At the bottom, the number of cells and divisions are given for the real-world datasets.
