Added new image explaining real centre of mass computation

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -622,6 +622,20 @@ In the model, a total random configuration of cell division lines may result in 
 \subsubsection{Computation of Centre of cell}
 \noindent
 \TODO{describe how the real centre of mass is computed}
+%
+\begin{figure}[htbp]
+	\begin{center}
+		\begin{overpic}[width=1.\linewidth]{images/levelOfDetail.pdf}
+		\end{overpic}
+\caption[Realistic computation of centre of mass.]
+{
+{\bf Realistic computation of centre of mass. Left:}. \textbf{Right:}.
+}
+	\label{fig:levelOfDetail}
+	\end{center}
+\end{figure}
+%
+
 
 \subsubsection{Parameter Setting for Data-driven and Idealized Models}
 \noindent
@@ -752,20 +766,20 @@ Average $\#$ PD & 31.3 & 23.0 & 47.1 & 24.1 & 41.3 &&
 Area Ratio & 0.078 & 0.060 & 0.048 & 0.047 & 0.054 &&
 0.450 & 0.450 & 0.450 & &\\
 Average $\#$ Cells & 61.9 & 48.3 & 79.1 & 45.1 & 86.5 &&
-& 64.5 & & &\\
+& 64.5 & 60.2 & &\\
 Average $\#$ AD & 32.1 & 27.3 & 33.3 & 22.5 & 42.3 &&
-& 26.0 & & &\\
+& 26.0 & 4.08 & &\\
 Average $\#$ PD & 27.8 & 19.0 & 43.8 & 20.5 & 42.1 &&
-& 36.5 & & &\\
+& 36.5 & 54.1 & &\\
 \textbf{2DCBase}\\
 Area Ratio & & & & & &&
 0.450 & 0.450 & 0.450 & &\\
 Average $\#$ Cells & & & & & &&
-62.5 & 66.2 & & &\\
+62.5 & 66.2 & 72.9 & &\\
 Average $\#$ AD & & & & & &&
-18.0 & 36.6 & & &\\
+18.0 & 36.6 & 4.24 & &\\
 Average $\#$ PD & & & & & &&
-42.4 & 27.5 & & &\\
+42.4 & 27.5 & 66.7 & &\\
 \textbf{Real Data}\\
 $\#$ Cells & 64 & 49 & 81 & 45 & 82 &&
 & & & &\\
