--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper, draft]{article}
+\documentclass[11pt,a4paper, final]{article}
 \usepackage{ocg}
 \usepackage{times}
 \usepackage{pdfpages}
@@ -227,7 +227,7 @@ In a nutshell, for each time step, 3D surfaces are constructed using the set of 
 %
 \begin{figure}[htbp]
 	\begin{center}
-		\begin{overpic}[width=1.\linewidth]{images/alphaShapes.pdf}
+		\begin{overpic}[width=1.\linewidth]{images/alphaShapes_compressed.pdf}
 		\end{overpic}
 \caption[Approximation of the lateral root using $\alpha$-shapes.]
 {
@@ -602,9 +602,7 @@ The last scenario is considering a random rule but preserving almost equal area 
 %
 \begin{figure}[htbp]
 	\begin{center}
-		\begin{overpic}[width=1.\linewidth]{images/shapePreserving.pdf}
-%			\putIndex{0}{0}{A.pdf}
-%			\putIndex{52}{0}{B.pdf}
+		\begin{overpic}[width=0.8\linewidth]{images/shapePreserving.pdf}
 		\end{overpic}
 \caption[Cell Shape Preservation.]
 {
@@ -833,7 +831,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 %
 \begin{figure}[htbp]
 	\begin{center}
-	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets.pdf}
+	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets_compressed.pdf}
 	\end{overpic}
 \caption[Time lapse recording of five lateral root primordia.]
 {{\bf Time lapse recording of five lateral root primordia.} For each indicated dataset (Table 1 and \ref{tab:metadata}) Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of UBQ10::YFP-PIP1;4 (membranes) and GATA23::GUS-GFP-NLS (nuclei) is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are on table S~\ref{tab:metadata}.}
@@ -844,7 +842,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 \clearpage
 \begin{figure}[htbp]
 	\begin{center}
-	\begin{overpic}[width=1.\linewidth]{images/DatasetsTrackingFounders.pdf}
+	\begin{overpic}[width=1.\linewidth]{images/DatasetsTrackingFounders_compressed.pdf}
 	\end{overpic}
 \caption[Five virtual lateral root primordia.]
 {{\bf Five virtual lateral root primordia.} For each indicated datasets, the spatial distribution of cell nuclei is represented. The first and last time point segmented as well as the one corresponding to 142 cells primordia are shown in the front, side and radial views. Clonally related cells share the same colour. The colour scheme used is identical to Figure 2C. }
@@ -883,7 +881,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 %
 \begin{figure}[htbp]
 	\begin{center}
-	\begin{overpic}[width=0.5\linewidth]{images/LRPcenterFirstAndLast.pdf}
+	\begin{overpic}[width=0.5\linewidth]{images/LRPcenterFirstAndLast_compressed.pdf}
 	\end{overpic}
 \caption[Single cell initiation events are restricted to the periphery of the filed of founder cells.]
 {{\bf Single cell initiation events are restricted to the periphery of the filed of founder cells.} (A) First time point of the membrane channel in the front view. (B) A sketch of the position of the cell boundaries. Cells in the master cell file are colored in light and dark green, respectively. The cells in the two flanking cell files are yellow or orange. The other cell files in grey. The arrowhead indicate founders not belonging to a pair of pericycle cells.}
@@ -933,7 +931,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 %
 \begin{figure}[htbp]
 	\begin{center}
-	\begin{overpic}[width=0.5\linewidth]{images/Foudners_and_endodermis.pdf}
+	\begin{overpic}[width=0.5\linewidth]{images/Founders_and_endodermis_compressed.pdf}
 	\end{overpic}
 \caption[Correlation between endoderm cells disposition and first dividing founder.]
 {{\bf Correlation between endoderm cells disposition and first dividing founder} (A) First time point of the membrane channel in the front view. (B) A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are yellow or orange. The other cell files in grey. The white-magenta dashed line represents the contours of the overlying endodermis cells. The blue arrowhead indicate the first founder to divide.}
@@ -959,7 +957,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 
 %
 \begin{figure}[htbp]
-	\begin{overpic}[width=1.\linewidth]{images/division_rules.pdf}
+	\begin{overpic}[width=1.\linewidth]{images/division_rules_compressed.pdf}
 	\end{overpic}
 \caption[Orientation of the division in relation to the geometry of the cell.]
 {{\bf Orientation of the division in relation to the geometry of the cell.} For each indicated dataset, single sections along indicated cell files (overview upper left) are shown. The sections are shown at several time points (A-E). Cell divisions were assigned into two classes depending on the size of the cell wall relative to the cell dimensions. Yellow- division along the short axis , blue - division along the long axis. }
@@ -970,7 +968,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
 
 %
 \begin{figure}[htbp]
-	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets-131203.pdf}
+	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets-131203_compressed.pdf}
 	\end{overpic}
 \caption[ Time lapse recording of  lateral root primordia development in the \emph{aurora} double mutant.]
 {{\bf Time lapse recording of  lateral root primordia development in the \emph{aurora} double mutant.} Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of pPIN1::PIN1-GFP  is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are on table S~\ref{tab:metadata}}
