updated supp movies section

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1006,7 +1006,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
     \end{itemize}
     \item Virtual lateral roots datasets \href{http://youtu.be/EXIp3H0y5UI}{\textcolor{blue}{[LINK]}}
     \item Synchronisation on the number of cells, radial view \href{http://youtu.be/YZFkpcnyjiY}{\textcolor{blue}{[LINK]}}
-    \item 1 movie of growth tensor in 3 views \href{http://youtu.be/cdY3t1iVRF8}{\textcolor{red}{[MISSING LINK]}}
+    \item Average growth tensor. Corresponds to Figure 2B \href{https://youtu.be/unsGbA8-J-Y}{\textcolor{blue}{[LINK]}}
     \item Layer formation in all datasets in 3 views
     \begin{itemize}
         \item Dataset \#130607 \href{http://youtu.be/cdY3t1iVRF8}{\textcolor{blue}{[LINK]}}
@@ -1015,7 +1015,11 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13 &&
         \item Dataset \#121211 \href{http://youtu.be/NOouEVqpGj8}{\textcolor{blue}{[LINK]}}
         \item Dataset \#130508 \href{http://youtu.be/EajarNlRvtA}{\textcolor{blue}{[LINK]}}
     \end{itemize}		
-    \item One combined movie with all 3 visualisations \href{http://youtu.be/cdY3t1iVRF8}{\textcolor{red}{[MISSING LINK]}}
+    \item Model of lateral root formation, \emph{Geometric} model, corresponding to Figure 5A  \href{https://youtu.be/GLUKCE4nN3A}{\textcolor{blue}{[LINK]}}
+        \item Model of lateral root formation, \emph{Geometric plus asymmetric} model, corresponding to Figure 5D  \href{https://youtu.be/ypBdyjFyqYw}{\textcolor{blue}{[LINK]}}
+    \item Model of lateral root formation, \emph{Random} model, corresponding to Figure 5G  \href{https://youtu.be/V9xkyPfRQeM}{\textcolor{blue}{[LINK]}}
+    \item Model of lateral root formation, \emph{Basal growth} model, corresponding to Figure 5N  \href{https://youtu.be/TZqwYTnmAgg}{\textcolor{blue}{[LINK]}}
+
     \item Time lapse recording of the \emph{aur1-2 aur2-2} double mutant, dataset \#131203. Corresponds to Figure~\ref{fig:aurora} \href{http://youtu.be/y8b-0J4lPHg}{\textcolor{blue}{[LINK]}}
     \item Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant \href{http://youtu.be/kkQZub-puVI}{\textcolor{blue}{[LINK]}}
     \item Layer formation in the \emph{aur1-2 aur2-2} double mutant  \href{http://youtu.be/FH5BJ177TGk}{\textcolor{blue}{[LINK]}}
